fixed page jumping when header shrinks

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ body {
   background-color: #FAFAFA;
 }
 
+#wrapper {
+  min-height: 100vh;
+}
+
 .header {
   width: 100%;
   height: 340px;
@@ -152,6 +156,16 @@ body {
 .section-content iframe {
   width: 80%;
   height: 85vh;
+}
+
+.section-content h3 {
+  font-weight: 400;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.section-content p {
+  margin-bottom: 10px;
 }
 
 @media (max-width:800px) {
